# iPhyloGeo

./: .env.example  .env.exemple  .flake8  .gitignore  Dockerfile.dev  Gruntfile.js  Makefile  PRECTOTCORR_SUM_newick  QV2M_newick  README.fr.md  README.md  RH2M_newick  WD10M_newick  WS10M_newick  WS10M_newick.txt  app.py  docker-compose.yml  genetic_settings_file.json  genetic_settings_file.yaml  index.py  main.js  nom_tree.py  output.csv  package-lock.json  package.json  pipeline.py  pipeline_user 2.py  pipeline_user.py  pyproject.toml  pytest.ini  requirements.txt  requirements1.txt  todo.txt  tree.py  tree_user 2.py  worker.py
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: github-actions-demo.yml  github-actions.yml
DashNeo/: .gitignore  app.py  environment.yml  index.py
DashNeo/apps/: config_manager.py  geoData_manager.py  homePage.py  neoCypher_manager.py  neoExplore.py  outputExplore.py  parametersSetting.py  paramsTuning.py  seqData_manager.py
Data/CovLineage/: .lineage_data.full.json.icloud  lineage_data.csv
Data/NCBI_virus/: nucleotide_1.csv  nucleotide_2.csv  nucleotide_3.csv  nucleotide_4.csv  nucleotide_USA.csv  protein_1.csv  protein_2.csv  protein_3.csv  protein_4.csv  protein_5.csv  protein_6.csv  protein_USA_AL.csv  protein_USA_CT.csv  protein_USA_ID.csv  protein_USA_SD.csv  protein_USA_UT.csv
Data/owid/: .Owid_selected.csv.icloud  .owid-covid-data.csv.icloud
Data_preprocessing/: NCBIVirus.ipynb  climate.ipynb  data_preprocess1.ipynb  forCovLineages.ipynb
Neo4j/: importingDataPrepare.ipynb  neo.ipynb
apps/: addGene.py  addMeteo.py  app.py  checkResults.py  enums.py  geneParam.py  getStarted.py  homePage.py  logPage 2.py  logPage.py  mainPage.py  pipelineWithOurData.py  pipelineWithUploadedData.py  run.py  upload_MeteorologicalDataset.py  usingOurMeteorologicalDataset.py
apps/archive/: homePage.py
apps/assets/: logo_base64.py  script.js
apps/components/: badge.py  email_input.py  page_section.py  result_card.py  settings_section.py  toast.py
apps/dataset/: Cumacea.csv  Cumacea.fasta  Final_sequences_not_aligned.fas
apps/db/: db_validator.py
apps/pages/: getStarted.py  help.py  homePage.py  settings.py
apps/results/: results.py
apps/scripts/: delete_files.py
apps/upload/: dataTypeSection.py  dropFileSection.py  getStarted.py
apps/utils/: background_tasks.py  i18n.py  mail.py  time.py  utils.py
assets/: bWLwgP.css  main.css  main.css.map  script.js
assets/scss/: main.scss
assets/styles/: home_page.scss  nav_bar.scss  results.scss  upload_page.scss
db/: db_validator.py
db/controllers/: files.py  (+1 more)
exec/: consense  dnadist  muscle  neighbor  raxmlHPC  rf  rf.cpp  seqboot
output/: upload_gene.fasta
scripts/: cronjob  delete_files.py  sass_css.js  touch_app_on_locale_change.js
temp/: temp.txt
test/: geo.csv
utils/: utils.py
(+254 files in other folders)
