[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iphylogeo"
version = "0.1.0"
description = "Interface web de visualisation de données phylogéographiques en Python à l'aide de Dash"
authors = [
    { name = "Nadia Tahiri", email = "Nadia.Tahiri@usherbrooke.ca" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/tahiri-lab/iPhyloGeo"

[project.dependencies]
python = ">=3.10"
dash = "^2.8.1"
flask = "^3.0.3"
flask-pymongo = "^2.3.0"
pymongo = "^4.8.0"
python-dotenv = "^1.0.0"
aphylogeo = "==1.0.0"
attrs = "==24.2.0"
backports.shutil-get-terminal-size = "==1.0.0"
bio = "==1.5.9"
biopython = "==1.84"
biothings-client = "==0.3.1"
blinker = "==1.8.2"
certifi = "==2024.7.4"
charset-normalizer = "==3.3.2"
click = "==8.1.7"
colorama = "==0.4.6"
colour = "==0.1.5"
Cython = "==3.0.11"
dash-bootstrap-components = "==1.3.1"
dash-core-components = "==2.0.0"
dash-html-components = "==2.0.0"
dash-table = "==5.0.0"
dash_bio = "==1.0.2"
dash_cytoscape = "==1.0.2"
dash_daq = "==0.5.0"
DendroPy = "==4.6.4"
dill = "==0.3.8"
dnspython = "==2.6.1"
et-xmlfile = "==1.1.0"
ete3 = "==3.1.3"
exceptiongroup = "==1.1.1"
GEOparse = "==2.0.4"
gprofiler-official = "==1.0.0"
idna = "==3.7"
importlib-metadata = "==5.2.0"
iniconfig = "==2.0.0"
itsdangerous = "==2.2.0"
Jinja2 = "==3.1.4"
joblib = "==1.4.2"
jsonschema = "==4.23.0"
jsonschema-specifications = "==2023.12.1"
MarkupSafe = "==2.1.5"
multiprocess = "==0.70.16"
mygene = "==3.2.2"
numpy = "==1.26.0"
openpyxl = "==3.1.1"
packaging = "==24.1"
pandas = "==2.1.1"
ParmEd = "==4.2.2"
pathlib2 = "==2.3.5"
periodictable = "==1.7.1"
platformdirs = "==4.2.2"
plotly = "==5.3.0"
pluggy = "==1.5.0"
pooch = "==1.8.2"
psutil = "==5.9.8"
pyparsing = "==3.1.2"
pysonar-scanner = "==0.2.0.520"
pytest = "==7.4.4"
python-dateutil = "==2.9.0.post0"
pytz = "==2024.1"
PyYAML = "==6.0.2"
referencing = "==0.35.1"
requests = "==2.32.3"
robinson-foulds = "==1.2"
rpds-py = "==0.20.0"
scikit-learn = "==1.5.1"
scipy = "==1.14.0"
six = "==1.16.0"
tenacity = "==9.0.0"
textdistance = "==4.6.3"
threadpoolctl = "==3.5.0"
toml = "==0.10.2"
tqdm = "==4.66.5"
typing-extensions = "==3.7.4.3"
tzdata = "==2024.1"
urllib3 = "==2.2.2"
Werkzeug = "==3.0.3"
zipp = "==3.19.2"


[tool.flake8]
ignore = ["E501"]
exclude = [".git", "node_modules", ".env"]

[tool.sonar]
# must be unique in a given SonarQube instance
projectKey="iphylogeo"
sources = ["apps"]

# --- optional properties ---
# defaults to project key
#projectName=My project
# defaults to 'not provided'
#projectVersion=1.0

# Path is relative to the pyproject.toml file. Defaults to .
#sources=.

# Encoding of the source code. Default is default system encoding
#sourceEncoding=UTF-8
